/**
 * 산출물 생성기 테스트 (PLAN.md §8 M2, §검증 루프).
 *  - 골든 산출물 스냅샷 (cloud / airgap 프로필)
 *  - 결정성: 동일 spec → 동일 산출 (고정 now)
 *  - ZIP round-trip: 묶고 풀어서 원본 복원
 *  - 공공기관 제약이 PROMPT.md 에 반영되는지(핵심 보장) 단언
 */

import { describe, it, expect } from "vitest";
import { unzipSync, strFromU8 } from "fflate";
import {
  generateArtifacts,
  bundleToZipBytes,
  type GeneratedFile,
} from "./index";
import { cloudSpec, airgapSpec, toolAgentSpec, voiceSpec, FIXED_NOW } from "./fixtures";
import { detectConflicts } from "@/lib/conflicts";

function fileMap(files: GeneratedFile[]): Record<string, string> {
  return Object.fromEntries(files.map((f) => [f.path, f.contents]));
}

describe("generateArtifacts — 파일 구성", () => {
  it("문서 + 스캐폴딩 핵심 파일이 모두 생성된다 (cloud)", () => {
    const paths = generateArtifacts(cloudSpec, { now: FIXED_NOW }).map((f) => f.path);
    for (const p of [
      "PROMPT.md",
      "DESIGN.md",
      "CLAUDE.md",
      "ARCHITECTURE.md",
      "README.md",
      "agent-spec.json",
      "package.json",
      "src/server.ts",
      "src/chat.ts",
      "src/llm/client.ts",
      "src/rag/pipeline.ts",
      "public/styles.css",
      "tests/golden.test.ts",
      ".env.example",
    ]) {
      expect(paths).toContain(p);
    }
  });

  it("경로 기준 정렬로 항상 같은 순서를 반환한다(결정성)", () => {
    const paths = generateArtifacts(cloudSpec, { now: FIXED_NOW }).map((f) => f.path);
    expect(paths).toEqual([...paths].sort((a, b) => a.localeCompare(b)));
  });

  it("RAG pipeline 의 ingest/chunk/index 가 throw 스텁이 아니라 실제 구현이다", () => {
    const p = fileMap(generateArtifacts(cloudSpec, { now: FIXED_NOW }))["src/rag/pipeline.ts"];
    expect(p).toContain("readFile"); // ingest 가 파일을 실제로 읽는다
    expect(p).toContain("CHUNK_SIZE"); // chunk 가 크기 기반 분할
    expect(p).toContain("INDEXED"); // index 가 인메모리 색인에 적재
    expect(p).not.toContain('throw new Error("TODO: 청킹');
  });

  it("RAG 비활성 시 pipeline.ts 를 생성하지 않는다", () => {
    const noRag = { ...cloudSpec, rag: { ...cloudSpec.rag, enabled: false } };
    const paths = generateArtifacts(noRag, { now: FIXED_NOW }).map((f) => f.path);
    expect(paths).not.toContain("src/rag/pipeline.ts");
  });

  it("tool-agent 는 tools.ts(TOOLS+TOOL_DEFS) + 도구 루프 + confirm 라우트를 생성한다", () => {
    const m = fileMap(generateArtifacts(toolAgentSpec, { now: FIXED_NOW }));
    expect(m["src/tools.ts"]).toContain("search_minwon");
    expect(m["src/tools.ts"]).toContain("export const TOOLS");
    expect(m["src/tools.ts"]).toContain("TOOL_DEFS"); // Anthropic tool-use 정의
    expect(m["src/tools.ts"]).toContain("input_schema");
    expect(m["src/chat.ts"]).toContain("Object.keys(TOOLS)");
    expect(m["src/server.ts"]).toContain("/api/chat/confirm"); // toolPolicy=confirm
    expect(m["PROMPT.md"]).toContain("search_minwon"); // PROMPT 가 도구를 이름으로 명시
    expect(m["src/chat.ts"]).toContain("yield { trace: t }"); // 도구 trace SSE 이벤트(expanded)
  });

  it("안전 설정(rate limit/남용/입력길이)이 server 가드 미들웨어로 생성된다", () => {
    const m = fileMap(generateArtifacts(toolAgentSpec, { now: FIXED_NOW }));
    expect(m["src/server.ts"]).toContain("RATE_PER_MIN");
    expect(m["src/server.ts"]).toContain("isAbusive");
    expect(m["src/server.ts"]).toContain("너무 깁니다");
  });

  it("가드레일(거절 스타일·금칙 주제·PII)이 시스템 프롬프트에 주입된다", () => {
    const spec = {
      ...cloudSpec,
      llm: { ...cloudSpec.llm, guardrails: { ...cloudSpec.llm.guardrails, bannedTopics: ["정치", "투자권유"] } },
    };
    const chat = fileMap(generateArtifacts(spec, { now: FIXED_NOW }))["src/chat.ts"];
    expect(chat).toContain("답변이 불가능하면"); // 거절 스타일 지시
    expect(chat).toContain("정치, 투자권유"); // 금칙 주제
    expect(chat).toContain("개인정보"); // PII 필터(기본 on)
  });

  it("폐쇄망 음성+접근제어 프로필: PROMPT 반영 + 온프레미스 음성 충돌 없음", () => {
    const m = fileMap(generateArtifacts(voiceSpec, { now: FIXED_NOW }));
    expect(m["PROMPT.md"]).toContain("음성");
    expect(m["PROMPT.md"]).toContain("접근 제어");
    expect(detectConflicts(voiceSpec).map((c) => c.id)).not.toContain("C16");
  });

  it("멀티턴+스트리밍이면 세션 스토어 + SSE 엔드포인트 + answerStream 을 생성한다", () => {
    const m = fileMap(generateArtifacts(cloudSpec, { now: FIXED_NOW }));
    expect(m["src/chat.ts"]).toContain("SESSIONS");
    expect(m["src/chat.ts"]).toContain("answerStream");
    expect(m["src/server.ts"]).toContain("/api/chat/stream");
    expect(m["src/llm/client.ts"]).toContain("completeStream");
  });
});

describe("결정성", () => {
  it("동일 spec + 동일 now → 완전히 동일한 산출", () => {
    const a = generateArtifacts(cloudSpec, { now: FIXED_NOW });
    const b = generateArtifacts(cloudSpec, { now: FIXED_NOW });
    expect(a).toEqual(b);
  });
});

describe("공공기관 제약 반영 (제품 핵심 보장)", () => {
  it("폐쇄망 프로필의 PROMPT.md 는 오프라인 제약과 self-hosted 를 명시한다", () => {
    const prompt = fileMap(generateArtifacts(airgapSpec, { now: FIXED_NOW }))["PROMPT.md"];
    expect(prompt).toContain("폐쇄망");
    expect(prompt).toContain("외부 인터넷 호출 불가");
    expect(prompt).toContain("사내 추론 서버");
  });

  it("airgap 스캐폴딩은 Anthropic SDK 의존성을 넣지 않는다(공식 API 아님)", () => {
    const pkg = fileMap(generateArtifacts(airgapSpec, { now: FIXED_NOW }))["package.json"];
    expect(pkg).not.toContain("@anthropic-ai/sdk");
    expect(pkg).toContain("express");
  });

  it("cloud 스캐폴딩은 Claude 공식 API 클라이언트를 생성한다", () => {
    const client = fileMap(generateArtifacts(cloudSpec, { now: FIXED_NOW }))["src/llm/client.ts"];
    expect(client).toContain("@anthropic-ai/sdk");
  });

  it("도구호출 에이전트 모드는 PROMPT/스캐폴드에 에이전트 루프를 명시한다", () => {
    const agent = {
      ...cloudSpec,
      interaction: { ...cloudSpec.interaction, agentMode: "tool-agent" as const },
    };
    const m = fileMap(generateArtifacts(agent, { now: FIXED_NOW }));
    expect(m["PROMPT.md"]).toContain("도구호출 에이전트");
    expect(m["src/chat.ts"]).toContain("도구 호출 루프");
  });

  it("에이전트 능력(서브에이전트·내장도구·자동압축)이 PROMPT 에 반영된다", () => {
    const agent = {
      ...cloudSpec,
      agent: {
        ...cloudSpec.agent,
        subAgents: { enabled: true, maxParallel: 3, roles: [] },
        builtinTools: ["web-search" as const, "calculator" as const],
        context: { autoCompact: true, strategy: "summarize" as const },
      },
    };
    const m = fileMap(generateArtifacts(agent, { now: FIXED_NOW }));
    expect(m["PROMPT.md"]).toContain("서브에이전트");
    expect(m["PROMPT.md"]).toContain("web-search");
    expect(m["PROMPT.md"]).toContain("자동 압축");
  });

  it("디자인 토큰이 styles.css 에 CSS 변수로 들어간다", () => {
    const css = fileMap(generateArtifacts(cloudSpec, { now: FIXED_NOW }))["public/styles.css"];
    expect(css).toContain("--color-primary: #1F4E8C");
  });
});

describe("ZIP round-trip", () => {
  it("묶었다가 풀면 원본 파일 내용이 복원된다", () => {
    const files = generateArtifacts(cloudSpec, { now: FIXED_NOW });
    const bytes = bundleToZipBytes(files);
    const unzipped = unzipSync(bytes);
    const original = fileMap(files);
    for (const [path, contents] of Object.entries(original)) {
      expect(strFromU8(unzipped[path])).toBe(contents);
    }
    expect(Object.keys(unzipped).sort()).toEqual(Object.keys(original).sort());
  });
});

describe("골든 산출물 스냅샷", () => {
  it("cloud 프로필 전체 산출 스냅샷", () => {
    expect(fileMap(generateArtifacts(cloudSpec, { now: FIXED_NOW }))).toMatchSnapshot();
  });
  it("airgap 프로필 전체 산출 스냅샷", () => {
    expect(fileMap(generateArtifacts(airgapSpec, { now: FIXED_NOW }))).toMatchSnapshot();
  });
});
